versions/v0.26/modules/en/pages/index.adoc
= Overview
:description: Understand the architectural features and core concepts of SUSE Rancher Prime Cluster API, including integration with Rancher Manager and Cluster API
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-13
:page-revdate: {revdate}

[IMPORTANT]
====
Rancher v2.14 ships CAPI v1.12.2 and adopts the new `v1beta2` API contract. Refer to xref:tutorials/capi-v1beta2.adoc[Upgrading to CAPI v1beta2] for more details on the changes introduced in this new API version.
====

[CAUTION]
====
Cluster API Add-on Provider for Fleet (CAAPF) is deprecated as of Rancher v2.14.1 and is no longer installed by default. We encourage you to move away from CAAPF in preparation for its eventual removal (following Rancher deprecation policies). You can refer to xref:./user/applications.adoc[this guide] for more information on how to replace CAAPF with other alternatives.

If you wish to continue using it, refer to the xref:user/caapf.adoc[CAAPF user guide] for more information.
====


== What is {product_name}?

The Cluster API Extension for Rancher, also known as {product_name}, is a Kubernetes Operator that provides **integration between Rancher Manager and Cluster API (CAPI)** with the aim of bringing full CAPI support to Rancher.

With {product_name}, you can:

* **Automatically import CAPI clusters into Rancher**, by installing the Rancher Cluster Agent in CAPI provisioned clusters.
* Implement a **GitOps-native** workflow to managing Kubernetes clusters in Rancher.
* **Simplified management of CAPI Providers** using the CAPI Operator.

image::intro.png[intro,640,480]

== Navigate the Documentation

To make it easier to get started with {product_name}, we have structured the documentation to guide you naturally from basic concepts to advanced features. We recommend following along step by step, but if you are already familiar with certain topics, feel free to skip ahead to the relevant sections.

=== Tutorials

If this is your first time using {product_name} and you want to get started quickly, we recommend the xref:tutorials/first-cluster.adoc[Create & Import Your First Cluster guide]. This will guide you through the process of using CAPI to provision a new workload cluster and importing it into Rancher.

=== Overview

Understand the xref:./overview/architecture.adoc[architecture] of {product_name}, the xref:./overview/features.adoc[features], the concept of xref:./overview/certified.adoc[`Certified Providers`] and the xref:./overview/glossary.adoc[core concepts] of the operator's features.

=== Reference

Contains the reference documentation for all {product_name} custom resources.

=== User Guide

Learn how to use {product_name} to xref:./user/clusterclass.adoc[manage your CAPI clusters with Rancher, using ClusterClass].

=== Operator Guide

ifeval::["{build-type}" == "product"]
You may want to dive into more advanced maintenance tasks, such as configuring {product_name} for xref:operator/airgapped.adoc[air-gapped environments], or xref:operator/certification.adoc[certifying the provider of your choice].
endif::[]
ifeval::["{build-type}" == "community"]
You may want to dive into more advanced maintenance tasks, such as configuring {product_name} for xref:operator/airgapped.adoc[air-gapped environments].
endif::[]

=== Developer Guide

If you are interested in contributing to {product_name}, this section will guide you through the process of setting up your xref:./developer/development.adoc[development environment] and understanding the xref:./developer/guidelines.adoc[guidelines] for contributing.

=== Troubleshooting

This section covers basic xref:./troubleshooting/troubleshooting.adoc[troubleshooting approaches] for issues related to {product_name} and Cluster API providers.

=== Security

{product_name} meets https://slsa.dev/spec/v1.0/levels#build-l3[SLSA Level 3] requirements by running builds on a hardened platform with consistent build processes and provenance distribution. xref:./security/slsa.adoc[This section] contains more details on security-related topics.

=== Release Notes

Stay up to date with the latest changes, bug fixes and new features in {product_name} xref:./changelogs/index.adoc[here].
